--- a/インターン資料/3 レイアウトを整えてみよう.md
+++ b/インターン資料/3 レイアウトを整えてみよう.md
@@ -28,7 +28,7 @@
       .scroll {
         width: 100%;
         height: 56px;
-        overflow: scroll;
+        overflow-y: scroll;
       }
       .choiceBox > div > button {
         margin: 5px 0;
