update: インターン資料修正

--- a/インターン資料/8 分岐を作ってみよう.md
+++ b/インターン資料/8 分岐を作ってみよう.md
@@ -51,7 +51,6 @@
       }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body>
     <div id="app">
@@ -90,6 +89,7 @@
       const startChatBot = "startChatBot";
       const choiceA = "A";
       const choiceB = "B";
+      // ここから
       // 14 選択肢用の定数を増やす
       const choiceC = "C";
       const choiceD = "D";
