--- a/インターン資料/7 選択肢を表示してみよう.md
+++ b/インターン資料/7 選択肢を表示してみよう.md
@@ -63,7 +63,7 @@
               <p>{{ log.text }}</p>
               <hr />
             </div>
-            <div v-if="log.speaker=='Chat bot'">
+            <div v-if="log.speaker==getBotName">
               <img src="img/route66.png" /> <b class="log">{{ log.speaker }}</b>
               <p>{{ log.text }}</p>
               <div class="choiceBox">
@@ -88,16 +88,22 @@
     <script>
       // ここから
       // 11 選択肢の定数を追加しよう
+      const botName = "Chat bot";
       const startChatBot = "startChatBot";
       const choiceA = "A";
       const choiceB = "B";
       let app = new Vue({
         el: "#app",
+        computed: {
+          getBotName: function(){
+            return botName;
+          }
+        },
         data: {
           submitPushed: false,
           logs: [
             {
-                speaker: "Chat bot",
+                speaker: botName,
                 text: "好きな文言を入れてね",
                 choiceList: []
             }
@@ -120,7 +126,7 @@
                 choiceList = [this.getChoiceObject(choiceA), this.getChoiceObject(choiceB) ];
                 break;
             }
-            this.pushLogs("Chat bot", text, choiceList);
+            this.pushLogs(botName, text, choiceList);
           },
           getChoiceObject: function(t) {
             return {
