--- a/インターン資料/8 分岐を作ってみよう.md
+++ b/インターン資料/8 分岐を作ってみよう.md
@@ -63,7 +63,7 @@
               <p>{{ log.text }}</p>
               <hr />
             </div>
-            <div v-if="log.speaker=='Chat bot'">
+            <div v-if="log.speaker==getBotName">
               <img src="img/route66.png" /> <b class="log">{{ log.speaker }}</b>
               <p>{{ log.text }}</p>
               <div class="choiceBox">
@@ -86,6 +86,7 @@
       </footer>
     </div>
     <script>
+      const botName = "Chat bot";
       const startChatBot = "startChatBot";
       const choiceA = "A";
       const choiceB = "B";
@@ -98,11 +99,16 @@
       // ここまで
       let app = new Vue({
         el: "#app",
+        computed: {
+          getBotName: function(){
+            return botName;
+          }
+        },
         data: {
           submitPushed: false,
           logs: [
             {
-                speaker: "Chat bot",
+                speaker: botName,
                 text: "好きな文言を入れてね",
                 choiceList: []
             }
@@ -148,7 +154,7 @@
                 break;
               // ここまで
             }
-            this.pushLogs("Chat bot", text, choiceList);
+            this.pushLogs(botName, text, choiceList);
           },
           getChoiceObject: function(t) {
             return {
