--- a/インターン資料/3 レイアウトを整えてみよう.md
+++ b/インターン資料/3 レイアウトを整えてみよう.md
@@ -14,8 +14,13 @@
         min-height: 90vh;
         flex-direction: column;
       }
+      header{
+        color:white;
+        background-color:royalblue
+      }
       body {
         text-align: center;
+        background-color:#EEE;
       }
       main {
         flex: auto;
